# Vec

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
artifacts/: eval_report.json  kg_edges.jsonl  kg_nodes.jsonl  query_logs.jsonl
config/: aliases.json
data/processed/: chunks.jsonl  chunks_enriched.jsonl  documents.jsonl
data/raw/: sample_college.md
eval/: questions.jsonl
notebooks/: eval_template.ipynb
tests/: test_markdown_parser.py  test_pipeline.py
vec_kg_rag/: __init__.py  evaluation.py  graph_store.py  io_utils.py  llm_client.py  markdown_parser.py  models.py  normalize.py  ontology.py  pipeline.py  query_engine.py  vector_store.py
vec_kg_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
